# qedsvm

./: .gitignore  COVERAGE.md  MIR.md  PIPELINE.md  README.md  ROADMAP.md  SVM.lean  Svm.lean  lake-manifest.json  lakefile.lean
formal-svm-rs/: Cargo.toml  build.rs
formal-svm-rs/csrc/: init_glue.c
formal-svm-rs/examples/: blueshift_asm.rs  doppler.rs
formal-svm-rs/src/: deserialize.rs  ffi.rs  lib.rs  serialize.rs  svm.rs  wire.rs
formal-svm-rs/tests/: byte_increment_smoke.rs  curve_ffi_probe.rs  diff_mollusk.rs  noop_smoke.rs  precompile_dispatch.rs  rent_enforcement.rs  serialize_round_trip.rs  smoke.rs  svm_api.rs  thread_safety.rs
formal-svm-rs/tests/fixtures/: README.md
formal-svm-rs/tests/fixtures/byte_increment_src/: Cargo.toml
formal-svm-rs/tests/fixtures/compute_budget_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/cpi_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/cpi_increment_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/cpi_two_account_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/curve_validate_probe_src/: Cargo.toml
formal-svm-rs/tests/fixtures/incrementer_src/: Cargo.toml
formal-svm-rs/tests/fixtures/logger_src/: Cargo.toml
formal-svm-rs/tests/fixtures/noop_src/: Cargo.toml
formal-svm-rs/tests/fixtures/oob_read_src/: Cargo.toml
formal-svm-rs/tests/fixtures/pda_finder_src/: Cargo.toml
formal-svm-rs/tests/fixtures/rodata_addr_returner_src/: Cargo.toml
formal-svm-rs/tests/fixtures/solana_noop_src/: Cargo.toml
formal-svm-rs/tests/fixtures/system_allocate_assign_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/system_create_account_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/system_create_account_with_seed_caller_src/: Cargo.toml
formal-svm-rs/tests/fixtures/system_transfer_caller_src/: Cargo.toml
qedsvm-rs/: Cargo.toml  README.md  build.rs
qedsvm-rs/csrc/: init_glue.c
qedsvm-rs/examples/: conformance_demo.rs  doppler.rs
qedsvm-rs/examples/lean/PToken/: MintAggregation.lean
qedsvm-rs/lean-bridge/: Cargo.toml  build.rs
qedsvm-rs/lean-bridge/src/: lean_ffi.rs  lib.rs
qedsvm-rs/qed-analysis/: Cargo.toml
qedsvm-rs/qed-analysis/src/: image.rs  layout.rs  lib.rs  profile.rs  symbolicate.rs
qedsvm-rs/qed-artifacts/: Cargo.toml  README.md
qedsvm-rs/qed-artifacts/src/: lib.rs
qedsvm-rs/qed-artifacts/tests/: compatibility.rs
qedsvm-rs/qed-artifacts/tests/fixtures/: descriptor-future.json  descriptor-v1.json  descriptor-v2.json  qedmeta-future.toml  qedmeta-v1.toml  qedmeta-v2.toml
qedsvm-rs/qedlift/: Cargo.toml  README.md  SYMBOLIC_EXECUTOR_REFACTOR.md
qedsvm-rs/qedlift/src/: api.rs  branch.rs  core.rs  diagnostic.rs  driver.rs  emit.rs  exec.rs  input.rs  isa.rs  lib.rs  lift.rs  main.rs  render.rs  spec_call.rs  state.rs  syscalls.rs  tests.rs  transition.rs  witness.rs
qedsvm-rs/qedlift/src/exec/: control.rs  mod.rs  step.rs  syscall_registry.rs  walk.rs
qedsvm-rs/qedlift/src/refinement/: counter.rs  descriptor.rs  mod.rs  shared.rs
qedsvm-rs/qedlift/src/tests/: bytecode.rs  metadata.rs  p_token.rs  refinement.rs  syscalls.rs  transitions.rs
qedsvm-rs/qedlift/tests/: artifact_compatibility.rs  public_api.rs
qedsvm-rs/qedrecover/: Cargo.toml  README.md
qedsvm-rs/qedrecover/src/: args.rs  emit.rs  idioms.rs  lib.rs  main.rs  recover.rs
qedsvm-rs/qedrecover/tests/: artifact_compatibility.rs
qedsvm-rs/qedsvm-buildscript/: Cargo.toml
qedsvm-rs/qedsvm-buildscript/src/: lib.rs
qedsvm-rs/scripts/: lift-coverage.sh
qedsvm-rs/spec/: qedmeta.md
qedsvm-rs/src/: cursor.rs  deserialize.rs  diff.rs  ffi.rs  lib.rs  serialize.rs  svm.rs  wire.rs
qedsvm-rs/src/analysis/: layout.rs  mod.rs
qedsvm-rs/tests/: byte_increment_smoke.rs  crypto_size_pins.rs  curve_ffi_probe.rs  diff_mollusk.rs  noop_smoke.rs  pinocchio_program_error.rs  precompile_dispatch.rs  rent_enforcement.rs  serialize_round_trip.rs  smoke.rs  svm_api.rs  sysvar_buffer_pins.rs  thread_safety.rs
qedsvm-rs/tests/common/: mod.rs
qedsvm-rs/tests/fixtures/: .gitignore  README.md  build-fixture.sh  counter.descriptor.json  counter_with_helper.debug  counter_with_helper.pcs  descriptor_future_schema.json  guarded_abort.descriptor.json  guarded_counter.descriptor.json  guarded_oob.descriptor.json  hello.elf  logger.pcs  p_token.disasm  p_token.qedmeta.toml  p_token.qedoverlay.toml  p_token.transfer.recovered.qedmeta.toml  p_token_approve_frozen.pcs  p_token_approve_owner_mismatch.pcs  p_token_burn.pcs  p_token_burn_frozen.pcs  p_token_burn_insufficient.pcs  p_token_close_account.pcs  p_token_close_account_nonzero.pcs  p_token_freeze_already_frozen.pcs  p_token_freeze_authority_mismatch.pcs  p_token_freeze_cannot_freeze.pcs  p_token_initialize_mint2.pcs  p_token_mint_to.pcs  p_token_mint_to_authority_mismatch.pcs  p_token_mint_to_dest_frozen.pcs  p_token_mint_to_fixed_supply.pcs  p_token_mint_to_mint_mismatch.pcs  p_token_mint_to_supply_overflow.pcs  p_token_revoke_frozen.pcs  p_token_revoke_owner_mismatch.pcs  p_token_set_authority_bad_type.pcs  p_token_set_authority_owner_mismatch.pcs  p_token_thaw_not_frozen.pcs  p_token_transfer.pcs  p_token_transfer.recovered.lean  (+25 more)
qedsvm-rs/tests/fixtures/abort_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/byte_increment_src/: Cargo.toml
qedsvm-rs/tests/fixtures/compute_budget_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/counter_src/: Cargo.toml
qedsvm-rs/tests/fixtures/counter_with_helper_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_depth_2_outer_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_envelope_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_get_return_data_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_get_return_data_pubkey_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_increment_caller_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_realloc_callee_src/: Cargo.toml
qedsvm-rs/tests/fixtures/cpi_realloc_overflow_callee_src/: Cargo.toml
qedsvm-rs/tests/fixtures/noop_src/: Cargo.toml
rust-bridge/: Cargo.toml  lean_glue.c
rust-bridge/src/: lean_ffi.rs  lib.rs
(+420 files in other folders)
