[package]
name = "formal-svm"
description = "Rust-side driver for the formal-svm Lean reference VM. Mollusk-shaped API for differential testing of Solana programs against the formal semantics."
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "formal_svm"

[dependencies]
# Pinned to agave master's published versions (see anza-xyz/agave Cargo.toml).
# The whole point of these crates is to be Mollusk-shape-compatible:
# a real Mollusk test can pass its `Pubkey` / `Instruction` /
# `AccountSharedData` directly into `formal_svm::Svm`.
solana-pubkey = { version = "4.2.0", default-features = false }
solana-instruction = { version = "3.4.0", default-features = false, features = ["std"] }
solana-account = "4.3.0"
solana-program-entrypoint = "3.1.1"  # for MAX_PERMITTED_DATA_INCREASE / BPF_ALIGN_OF_U128 / NON_DUP_MARKER

# Differential testing against the agave-backed Mollusk harness.
# Optional + feature-gated: only built and linked when
# `cargo test --features diff-mollusk` is invoked. Otherwise zero
# cost to the default build.
mollusk-svm = { version = "0.12.1-agave-4.0", optional = true, features = ["register-tracing"] }

[dev-dependencies]
# Round-trip oracle: agave's program-side deserializer (the one BPF
# programs link to). If our serialized output deserializes back to the
# same accounts via this crate, we know we match the on-chain format.
solana-account-info = "3.1.1"
# For the bpf_loader_upgradeable pubkey constant in diff_mollusk.rs.
solana-sdk-ids = "3.1.0"
# Mollusk uses solana-account 3.x internally; expose it under an alias
# so cross-engine tests can construct the version mollusk expects
# without touching the runtime crate's 4.x dependency.
mollusk-account = { package = "solana-account", version = "3.4.0" }

[features]
diff-mollusk = ["dep:mollusk-svm"]

[build-dependencies]
cc = "1"
