[workspace]
members = ["lean-bridge", "qedsvm-buildscript", "qed-analysis", "qedrecover"]
# Test fixtures contain many `*_src/Cargo.toml` sub-crates built by
# cargo-build-sbf; they are not part of this workspace.
exclude = ["tests/fixtures"]

# Profile config lives at the workspace root (Cargo ignores per-member
# profile settings). Reproducibility + minimal binary footprint for
# the bridge staticlib.
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
panic = "abort"

[package]
name = "qedsvm"
description = "Rust-side driver for the qedsvm Lean reference VM. Mollusk-shaped API for differential testing of Solana programs against the formal semantics."
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "qedsvm"

[[bin]]
name = "qedsvm-cli"
path = "src/bin/cli.rs"

# Transcription helper for lifting `llvm-objdump -d` output into Lean
# `Insn` syntax for the spec layer. Pure stdlib; no Solana deps used.
[[bin]]
name = "disasm-to-lean"
path = "src/bin/disasm_to_lean.rs"

# qedlift — end-to-end lift demo: load a Solana .so, extract .text,
# decode to insns, emit a Lean module with the bytes + decoded insns
# + decode-equality proof + Hoare-triple skeleton ready for
# `sl_block_auto` to close. Gated behind `qedrecover` (kept as the
# feature name the README documents); qedrecover itself is now a
# standalone crate (qedsvm-rs/qedrecover).
[[bin]]
name = "qedlift"
path = "src/bin/qedlift.rs"
required-features = ["qedrecover"]

[dependencies]
# Pinned to agave master's published versions (see anza-xyz/agave Cargo.toml).
# The whole point of these crates is to be Mollusk-shape-compatible:
# a real Mollusk test can pass its `Pubkey` / `Instruction` /
# `AccountSharedData` directly into `qedsvm::Svm`.
solana-pubkey = { version = "4.2.0", default-features = false }
solana-instruction = { version = "3.4.0", default-features = false, features = ["std"] }
solana-account = "4.3.0"
solana-program-entrypoint = "3.1.1"  # for MAX_PERMITTED_DATA_INCREASE / BPF_ALIGN_OF_U128 / NON_DUP_MARKER
solana-program-error = "3.0.0"       # for ProgramError + From<u64> decode of Pinocchio-encoded r0

# Differential testing against the agave-backed Mollusk harness.
# Optional + feature-gated: only built and linked when
# `cargo test --features diff-mollusk` is invoked. Otherwise zero
# cost to the default build.
mollusk-svm = { version = "0.12.1-agave-4.0", optional = true, features = ["register-tracing", "all-builtins"] }
# Mollusk's internal account type is `solana-account 3.x` (not 4.x).
# Aliased here so `src/diff.rs` can offer a converter between the two
# without callers having to set up the alias themselves. Optional +
# feature-gated alongside `mollusk-svm`.
mollusk-account = { package = "solana-account", version = "3.4.0", optional = true }
# Same alias trick for solana-pubkey: mollusk-account's `owner` field
# is `solana_pubkey::Pubkey` from the 3.x crate, not 4.x. Needed by
# `shared_to_mollusk_account` to construct the field when converting
# qedsvm → mollusk fixtures.
mollusk-pubkey = { package = "solana-pubkey", version = "3.0", optional = true, default-features = false }
# Precompile + bpf-loader pubkey constants. Used by `is_precompile`
# in svm.rs (top-level dispatch) and by diff_mollusk.rs.
solana-sdk-ids = "3.1.0"

# qedlift deps (gated by the `qedrecover` feature). qedrecover is now a
# standalone crate with its own copies; these serve qedlift, the only
# remaining in-crate consumer of the feature.
# Shared analysis substrate: slot<->logical PC map + IDL account layout.
qed-analysis = { path = "qed-analysis", optional = true }
# ELF loader + static analysis (CFG). Same version mollusk-svm pulls at
# agave 4.0. JIT disabled — analysis only.
solana-sbpf = { version = "0.14.4", default-features = false, optional = true }
# IDL parsing (serde) and overlay parsing (toml). Codama IDLs are
# flat-enough JSON that hand-rolled serde structs beat the codama-nodes
# crate + its transitive set.
serde       = { version = "1.0", features = ["derive"], optional = true }
serde_json  = { version = "1.0", optional = true }
toml        = { version = "0.8", optional = true }

[dev-dependencies]
# Round-trip oracle: agave's program-side deserializer (the one BPF
# programs link to). If our serialized output deserializes back to the
# same accounts via this crate, we know we match the on-chain format.
solana-account-info = "3.1.1"
# Pubkey features for tests: `rand` (new_unique) + `curve25519`
# (find_program_address). Cargo unifies the dev-dep features into the
# runtime crate's solana-pubkey too, so the runtime gets bloated
# slightly when tests are built — acceptable given how often tests
# build PDAs.
solana-pubkey = { version = "4.2.0", features = ["rand", "curve25519"] }
# Precompile instruction builders + sig-gen helpers. Used by the
# top-level precompile diff-mollusk fixtures; mirror the interface
# crates mollusk's own tests use.
solana-ed25519-program = "3.0.0"
solana-secp256k1-program = { version = "3.0.1", features = ["bincode"] }
solana-secp256r1-program = { version = "3.0.0", features = ["openssl-vendored"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
libsecp256k1 = "0.7.2"
openssl = "0.10"
rand = "0.8"
# Crypto SHAPE-axiom pins (L7): exact versions the `lean-bridge`
# crypto externs wrap, so `tests/crypto_size_pins.rs` asserts the
# output sizes the `CryptoTrust.lean` size axioms (trusted under
# `native_decide`) claim. Cargo unifies these with the bridge member.
sha2 = { version = "0.10.8", default-features = false }
sha3 = "0.10.8"
blake3 = "1.8.5"
# Sysvar-buffer pins (H7): `tests/sysvar_buffer_pins.rs` asserts the
# bincode serialization of mollusk's default sysvars equals the byte
# contents baked into `SVM/Syscalls/SysvarData.lean` (what
# `sol_get_sysvar` serves). Same version mollusk/agave use to fill the
# sysvar cache.
bincode = "1.3.3"

[features]
diff-mollusk = ["dep:mollusk-svm", "dep:mollusk-account", "dep:mollusk-pubkey"]

# qedlift deps (feature name kept as `qedrecover` for README continuity).
# JIT disabled on solana-sbpf — we only analyse, never execute.
qedrecover = ["dep:qed-analysis", "dep:solana-sbpf", "dep:serde", "dep:serde_json", "dep:toml"]

# Side-by-side demo: runs incrementer + p-token Transfer through both
# `qedsvm::Svm` and `mollusk_svm::Mollusk`, prints a comparison table.
# Requires `--features diff-mollusk` (cargo skips it otherwise).
[[example]]
name = "conformance_demo"
required-features = ["diff-mollusk"]

[build-dependencies]
cc = "1"
qedsvm-buildscript = { path = "qedsvm-buildscript" }
