[package]
name = "qed-artifacts"
description = "Versioned metadata, overlay, IDL, and refinement-descriptor contracts shared by qedsvm tools."
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"


[dependencies]
qed-analysis = { path = "../qed-analysis" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
