[package]
name = "qedlift"
description = "Lift selected paths through compiled Solana sBPF programs into checked Lean proof modules."
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
qed-analysis = { path = "../qed-analysis" }
qed-artifacts = { path = "../qed-artifacts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sbpf = { version = "0.14.4", default-features = false }
toml = "0.8"
