[package]
name = "qedrecover"
description = "Recover a qedmeta verification sidecar from a compiled Solana .so + IDL + overlay: dispatcher recognition, CFG slice, account layout. Analysis only; does not link the Lean runtime."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
qed-analysis = { path = "../qed-analysis" }
qed-artifacts = { path = "../qed-artifacts" }
# ELF loader + static analysis (CFG, basic blocks). JIT disabled.
solana-sbpf = { version = "0.14.4", default-features = false }
# IDL parsing (serde) + overlay parsing (toml).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# SHA-256 hash-pinning the emitted qedmeta sidecar's .so/IDL (issue #37).
sha2 = { version = "0.10.8", default-features = false }
