[package]
name = "formal-svm-byte-increment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# No solana-program — hand-written entrypoint mirroring noop_src/ so
# LLVM emits the tightest possible .text (load/add/store/exit).

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
