[package]
name = "qedsvm-halfword-store"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# No solana-program — hand-written entrypoint mirroring byte_increment_src/
# so LLVM emits the tightest possible .text (halfword load/store/exit).

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
