[package]
name = "qedsvm-noop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# No solana-program — we hand-write the entrypoint to minimize the
# emitted .text and avoid features Lean's loader doesn't model yet
# (R_BPF_64_RELATIVE relocations, complex syscall sequences).

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
